Method to get appointments of professioanol
