# src/routes/appointment.routes.js
@@ -1,5 +1,5 @@
 import { Router } from 'express';
-import { body } from 'express-validator';
+import { body, param } from 'express-validator';
 import appointmentControllers from '../controllers/appointment.controllers.js';
 import fieldValidator from '../middlewares/fieldValidator.js';
 import tokenValidator from '../middlewares/tokenValidator.js';
@@ -16,5 +16,11 @@ router.post("/", [
   body('endTime', 'END_TIME_IS_REQUIRED').isTime(),
   fieldValidator
 ], appointmentControllers.create);
+
+router.get('/professionals/:professionalId', [
+  tokenValidator,
+  param('professionalId', 'PROFESSIONAL_ID_IS_REQUIRED').isInt(),
+  fieldValidator
+], appointmentControllers.getAppointmentsByProfessional);
 
 export default router;
